# dmc-stack

./: .gitignore  LICENSE  README.md
cpp-server/: Dockerfile
playbox/: Dockerfile
server-source/: CMakeLists.txt  Dockerfile  config.h  docker-compose.yml  keys.h  loaders.cpp  main.cpp  routes.cpp
server-source/public/: add_contact.html  add_post.html  contact.html  contacts.html  index.html  project.html  react.html
server-source/public/scripts/: minmax.wasm  project.js  script.js
server-source/public/static/js/: main.be131e85.chunk.js  main.be131e85.chunk.js.map
server-source/public/styles/: contacts.css  index.css  main.7b0a09ae.chunk.css  main.7b0a09ae.chunk.css.map  project.css
